[gd_scene load_steps=4 format=3 uid="uid://dhblcvbweqsy8"]

[ext_resource type="Script" path="res://Scripts/stats_menu.gd" id="1_fpuyr"]
[ext_resource type="FontFile" uid="uid://bqryjkuqu52d6" path="res://Graphics/Styles/ethnocentric rg.otf" id="2_s16xm"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bf51n"]
bg_color = Color(0, 0, 0.490196, 0.584314)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0, 0, 1)
border_blend = true
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="Stats" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fpuyr")

[node name="PanelContainer" type="Panel" parent="."]
layout_mode = 0
offset_left = -8.0
offset_top = -32.0
offset_right = 504.0
offset_bottom = 416.0
theme_override_styles/panel = SubResource("StyleBoxFlat_bf51n")

[node name="Back" type="Button" parent="PanelContainer"]
layout_mode = 0
offset_left = 192.0
offset_top = 400.0
offset_right = 320.0
offset_bottom = 432.0
mouse_default_cursor_shape = 2
text = "Back"

[node name="Title" type="Label" parent="PanelContainer"]
layout_mode = 0
offset_left = 100.0
offset_top = 8.0
offset_right = 414.0
offset_bottom = 51.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_constants/shadow_outline_size = 6
theme_override_fonts/font = ExtResource("2_s16xm")
theme_override_font_sizes/font_size = 35
text = "Game Stats"

[node name="Name" type="Label" parent="PanelContainer"]
layout_mode = 0
offset_left = 40.0
offset_top = 88.0
offset_right = 151.0
offset_bottom = 113.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_constants/shadow_outline_size = 6
theme_override_fonts/font = ExtResource("2_s16xm")
theme_override_font_sizes/font_size = 20
text = "Player"

[node name="Players_container" type="VBoxContainer" parent="PanelContainer/Name"]
layout_mode = 0
offset_left = 8.0
offset_top = 32.0
offset_right = 104.0
offset_bottom = 248.0

[node name="Score" type="Label" parent="PanelContainer"]
layout_mode = 0
offset_left = 208.0
offset_top = 88.0
offset_right = 305.0
offset_bottom = 113.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_constants/shadow_outline_size = 6
theme_override_fonts/font = ExtResource("2_s16xm")
theme_override_font_sizes/font_size = 20
text = "Score"

[node name="Scores_container" type="VBoxContainer" parent="PanelContainer/Score"]
layout_mode = 0
offset_top = 32.0
offset_right = 96.0
offset_bottom = 248.0

[node name="Kills" type="Label" parent="PanelContainer"]
layout_mode = 0
offset_left = 376.0
offset_top = 88.0
offset_right = 453.0
offset_bottom = 113.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_constants/shadow_outline_size = 6
theme_override_fonts/font = ExtResource("2_s16xm")
theme_override_font_sizes/font_size = 20
text = "Kills"

[node name="Kills_container" type="VBoxContainer" parent="PanelContainer/Kills"]
layout_mode = 0
offset_left = -8.0
offset_top = 32.0
offset_right = 88.0
offset_bottom = 248.0

[connection signal="pressed" from="PanelContainer/Back" to="." method="_on_back_pressed"]
